<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFF" >
    
    <EditText 
        android:id="@+id/et_frag_tracker_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_frag_tracker_title_hint"
        android:maxLength="99"
        android:maxLines="1"
        style="@style/EditTextAppTheme" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp" >
        
        <Switch 
            android:id="@+id/switch_frag_tracker_tracking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:checked="false" />
        
        <TextView 
            android:id="@+id/tv_frag_tracker_start_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center" />
        
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp" >
        
        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:src="@drawable/ic_distance"
            android:contentDescription="@string/iv_frag_tracker_distance"
            android:background="@null" />
        
        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:src="@drawable/ic_duration"
            android:contentDescription="@string/iv_frag_tracker_duration"
            android:background="@null" />
        
        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:src="@drawable/ic_speed_current"
            android:contentDescription="@string/iv_frag_tracker_current_speed"
            android:background="@null" />
        
        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:src="@drawable/ic_speed_average"
            android:contentDescription="@string/iv_frag_tracker_average_speed"
            android:background="@null" />
        
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <TextView 
            android:id="@+id/tv_frag_tracker_distance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center" />
        
        <TextView 
            android:id="@+id/tv_frag_tracker_duration"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center" />
        
        <TextView 
            android:id="@+id/tv_frag_tracker_current_speed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center" />
        
        <TextView 
            android:id="@+id/tv_frag_tracker_average_speed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center" />
        
    </LinearLayout>
    
</LinearLayout>